frontend/core/src/main/webapp/static/less/layout.less
@import "foundation.less";
@import "inputs.less";

/*
<h1 class="main-heading">Layout</h1>

TODO: em grid structure explained in plain English (when new grid structure decided!)
*/

@height-heading: @grid-vertical * 1.6;
@height-container-toolbar: @grid-vertical * 1.3;
@height-landscape-max: 769px;
@t-max: 1025px;
@width-max: 1025px;
@width-column-max: 568px; // iPhone 5 landscape is still one column
@width-menu: 260px;

/*
**************************************************************************
# LEVEL 1: Root
*/

// 1. Set width and height for absolutely positioned (grand)children.
// 2. Must set position to relative for correct width during transitions. Otherwise page would scroll horizontally.
.container-root {
  height: 100%; // [1]
  width: 100%;  // [1]
  position: relative; // [2]
}

// 1. Minimize paint when editor is open and .container-master and .container-menu are stacked beneath.
//    At least absolutely positioned elements inside these classes would repaint and slow down swiping in
//    editor swiper.
.editor-visible .container-master,
.editor-visible .container-master *,
.editor-visible .container-menu,
.editor-visible .container-menu * {
  pointer-events: none; // [1]
  overflow: hidden;     // [1]
}

/*
**************************************************************************
# LEVEL 2: Optional Intermediate Containers (main, drawer-aisle)
*/

// 1. Inherit width and height for absolutely positioned (grand)children.
.container-main, .container-drawer-aisle, .container-drawer-aisle--inner {
  width: inherit;   // [1]
  height: inherit;  // [1]
}

// 1. .container-drawer-aisle must have a background in order to hide .container-menu and .container-editor.
.container-drawer-aisle {
  position: absolute;       // [1]
  background-color: white;  // [1]
}

/*
**************************************************************************
# LEVEL 3: Primary Containers (master, editor, menu)
*/

// 1. Layout for Snap.js. See https://github.com/jakiestfu/Snap.js/#layout
// 2. Inherit height to expand vertically and for (grand)children as well.
.container-master, .container-editor, .container-menu {
  position: absolute; // [1]
  height: inherit;    // [2]
}

// 1. Intermediate div needs height to work
.container-editor--inner {
  height: inherit;    // [1]
}

// 1. Maximum height is set programmatically - set default maximum height here as well for reference.
.container-master, .container-editor {
  max-height: @height-landscape-max;  // [1]
}

/*
Menu
*/

@height-menu-footer: @grid-vertical * 2;
// 1. Use native-style scrolling in WebKit browsers
.container-menu {
  -webkit-overflow-scrolling: touch;  // [1]
  width: @width-menu;
  overflow-y: auto;
  height:100%;
  background-color: @color-background-menu;
}

.container-menu--top {
  min-height: 100%;
  margin: 0 auto -@height-menu-footer; /* the bottom margin is the negative value of the footer's height */
  .separate {
    // use this to separate link elements from other
    line-height: 84px;
    padding-bottom: 6px;
    span {
      line-height: inherit;
    }
  }
  .link-menu:first-child {
    padding-top: 15px;
    line-height: @grid-vertical;
    padding-bottom: 15px;
  }
  .link-menu-small {
    line-height: @grid-vertical;
  }
}

.container-menu--bottom, .container-menu--push {
  height: @height-menu-footer;
}

.container-menu--bottom {
  height: @height-menu-footer;
}

/*
Vertically center .container-master and .container-editor in large screens
*/
@media (min-height: @height-landscape-max) {
  .container-master, .container-editor {
    margin-top: -@height-landscape-max / 2;
    top: 50%;
  }
}

/*
**************************************************************************
# LEVEL 4: Fluid, toaster
*/
@height-footer: @grid-vertical;

/*
`.container-fluid` sets the vertical positioning of the content area.
*/
.container-fluid {
  // FIXME: is this needed?
  .center-horizontally;
  // FIXME: is this needed?
}

// Fluid container height.
//
// Sources:
// http://stackoverflow.com/a/15933376
// http://stackoverflow.com/a/12255692
// http://pixelsvsbytes.com/blog/2011/09/sticky-css-footers-the-flexible-way/
//
// 1. Fixes width calculation with swiper inside. See: http://stackoverflow.com/a/19835024
// 2. Inherit height for display: table.
// 3. Set width for display: table
.container-fluid {
  display: table;
  table-layout: fixed;  /* [1] */
  height: inherit;      /* [2] */
  width: 100%;          /* [3] */
}

// 1. Fluid container height.
// 2. Inherit height because parent uses display: table
// 3. Default bottom padding to make room for footer. NOTE: Override programmatically if footer height is different.
.container-fluid--inner {
  display: table-cell;            // [1]
  height: inherit;                // [1,2]
  padding-bottom: @height-footer; // [3]
}

// 1. Clear padding-bottom for footer from fluid swiper container.
//    Padding-bottom is set programmatically in editor with swiper into .content-container.
.container-editor .swiper-container.container-fluid--inner {
  padding-bottom: 0;  // [1]
}

// 1. Inherit width from parent. Elements inside swiper would otherwise be as wide as `.swiper-wrapper`.
.swiper-slide .container-content {
  width: inherit; /* [1] */
}

// 1. Use same positioning as in swiper to make .container-content scrollable and .container-content--after visible.
//    Set left and right properties as well because .container-master and .container-editor are absolutely positioned.
//    See: http://www.smashingmagazine.com/2013/08/09/absolute-horizontal-vertical-centering-css/
.container-master, .container-editor {
  .swiper-slide {
    .container-content, .container-content--after {
      position: absolute; // [1]
      left: 0;            // [1]
      right: 0;           // [1]
    }
  }
}
/* ... */

